--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-<p> <a href="testhtml/welcome11/" target="_blank">HELLO</a> </p>
+<p> <a href="testhtml/welcome11/" target=_blank> HELLO </a> </p>
   </body>
 
 </html>
