quote group, block flow, links
test description

--- a/testhtml/welcome13/index.html
+++ b/testhtml/welcome13/index.html
@@ -9,41 +9,53 @@
   <body>
 
     <div class="header">
-      <div class="container">
-          <ul>
-            <li><a href="#">Menu 1</a></li>
-            <li><a href="#">Menu 2</a></li>
-            <li><a href="#">Menu 3</a></li>
-            <li><a href="#">Menu 4</a></li>
-            <li><a href="#">Menu 5</a></li>
-            <li><a href="#">Menu 6</a></li>
-          </ul>
-      </div>
+        <div class="container">
+            <ul>
+                <li><a href="#">Menu 1</a></li>
+                <li><a href="#">Menu 2</a></li>
+                <li><a href="#">Menu 3</a></li>
+                <li><a href="http://www.imageup.ru/img113/2490406/companylogo_335_65_2.jpg.html" target=_blink>CompanyName</a></li>
+                <li><a href="blockflow1.html" target=_blink>Block Flow 1</a></li>
+                <li><a href="blockflow2.html" target=_blink>Block Flow 2</a></li>
+           </ul>
+       </div>
     </div>
 
     <section class="main-landing">
-      <div class="span12">
+
         <h1>About Us</h1>
-        <h4 class="intro">Nunc condimentum euismod nibh nec viverra. Sed massa arcu, fringilla nec placerat in, convallis vitae ipsum. Quisque mi elit, vulputate sed lobortis eget, consequat eget ex. Etiam vehicula, nisl sed pharetra ornare, dui diam pharetra orci, ut accumsan lectus odio vel mauris. Nulla mattis egestas laoreet. Donec dapibus nec lorem vel condimentum. Praesent at lacus posuere, accumsan nisi id, mollis nunc. Nunc vitae dignissim nunc. Etiam ultricies quam eu dolor facilisis, non faucibus augue eleifend. Aliquam pellentesque ipsum id felis consectetur, at tincidunt nunc sollicitudin. In varius lorem urna, pellentesque molestie nibh malesuada vel. Etiam suscipit tristique scelerisque. Duis non mauris auctor, faucibus orci in, egestas dolor. Suspendisse ac arcu elit. Aenean tincidunt erat sed turpis semper maximus. Sed eget risus cursus, iaculis turpis sed, congue diam.</h4>
-        <h4 class="intro">Here's how it's done:</h4>
-        <strong>Superior Data</strong>
-      </div>
 
-      <div class="notecard">
-        <div class="ugol"></div>
-        <blockquote>Maecenas at lorem ut quam varius porttitor eget nec eros. Suspendisse sit amet dolor ullamcorper, consectetur ipsum lobortis, efficitur nisl. Sed in ullamcorper magna, sed varius purus. Proin a enim risus. Nam vehicula ullamcorper nibh eget suscipit. Etiam porttitor nisi nec risus lacinia, vel convallis turpis ultrices. In eget urna et quam sodales pretium.</blockquote>
-      </div>
-
-
-
+        <div class="notecard">
+            <div class="ugol"></div>
+            <blockquote>Maecenas at lorem ut quam varius porttitor eget nec eros. Suspendisse sit amet dolor ullamcorper, consectetur ipsum lobortis, efficitur nisl. Sed in ullamcorper magna, sed varius purus. Proin a enim risus. Nam vehicula ullamcorper nibh eget suscipit. Etiam porttitor nisi nec risus lacinia, vel convallis turpis ultrices. In eget urna et quam sodales pretium.
+            </blockquote>
+        </div>
+        <div class="notecard">
+            <div class="ugol"></div>
+            <blockquote>Maecenas at lorem ut quam varius porttitor eget nec eros. Suspendisse sit amet dolor ullamcorper, consectetur ipsum lobortis, efficitur nisl. Sed in ullamcorper magna, sed varius purus. Proin a enim risus. Nam vehicula ullamcorper nibh eget suscipit. Etiam porttitor nisi nec risus lacinia, vel convallis turpis ultrices. In eget urna et quam sodales pretium. 2 Maecenas at lorem ut quam varius porttitor eget nec eros. Suspendisse sit amet dolor ullamcorper, consectetur ipsum lobortis, efficitur nisl. Sed in ullamcorper magna, sed varius purus. Proin a enim risus. Nam vehicula ullamcorper nibh eget suscipit. Etiam porttitor nisi nec risus lacinia, vel convallis turpis ultrices. In eget urna et quam sodales pretium.
+            </blockquote>
+        </div>
+        <div class="notecard">
+            <div class="ugol"></div>
+            <blockquote>Maecenas at lorem ut quam varius porttitor eget nec eros. Suspendisse sit amet dolor ullamcorper, consectetur ipsum lobortis, efficitur nisl. Sed in ullamcorper magna, sed varius purus. Proin a enim risus. Nam vehicula ullamcorper nibh eget suscipit. Etiam porttitor nisi nec risus lacinia, vel convallis turpis ultrices. In eget urna et quam sodales pretium. 2 Maecenas at lorem ut quam varius porttitor eget nec eros. Suspendisse sit amet dolor ullamcorper, consectetur ipsum lobortis, efficitur nisl. Sed in ullamcorper magna, sed varius purus. Proin a enim risus. Nam vehicula ullamcorper nibh eget suscipit. Etiam porttitor nisi nec risus lacinia, vel convallis turpis ultrices. In eget urna et quam sodales pretium.
+            </blockquote>
+        </div>
+        <div class="notecard">
+            <div class="ugol"></div>
+            <blockquote>Maecenas at lorem ut quam varius porttitor eget nec eros. Suspendisse sit amet dolor ullamcorper, consectetur ipsum lobortis, efficitur nisl. Sed in ullamcorper magna, sed varius purus. Proin a enim risus. Nam vehicula ullamcorper nibh eget suscipit. Etiam porttitor nisi nec risus lacinia, vel convallis turpis ultrices. In eget urna et quam sodales pretium.
+            </blockquote>
+        </div>
 
     </section>
-    <div class="container">
-    <div class="inline-b"></div>
-    <div class="inline-b"></div>
-    <div class="inline-b"></div>
-    <div class="inline-b"></div>
-  </div>
+
+
+
+    <div class="container2">
+        <div class="inline-b"></div>
+        <div class="inline-b"></div>
+        <div class="inline-b"></div>
+        <div class="inline-b"></div>
+    </div>
 
   </body>
 
