--- a/testhtml/welcome13/index.html
+++ b/testhtml/welcome13/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#">Menu 1</a></li>
                 <li><a href="#">Menu 2</a></li>
-                <li><a href="#">Menu 3</a></li>
+                <li><a href="bordersizing.html" target=_blink>B Sizing</a></li>
                 <li><a href="http://www.imageup.ru/img113/2490406/companylogo_335_65_2.jpg.html" target=_blink>CompanyName</a></li>
                 <li><a href="blockflow1.html" target=_blink>Block Flow 1</a></li>
                 <li><a href="blockflow2.html" target=_blink>Block Flow 2</a></li>
