validator fixes added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-<p> <a href="testhtml/welcome11/" target=_blank> HELLO </a> </p>
+<p> <a href="testhtml/welcome11/" target=blank> HELLO </a> </p>
+<p> <a href="http://validator.w3.org/nu/" target=blank> validator </a> </p>
   </body>
 
 </html>
