--- a/testhtml/welcome14/test.html
+++ b/testhtml/welcome14/test.html
@@ -4,10 +4,12 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="grid.css">
         <title>welcome #14</title>
+        <link rel="shortcut icon" href="img/32x32xom.jpg">
     </head>
     <body>
-        <div style="padding: 0;">
-
+        <div style="padding: 20px; border:1px solid red">
+          <a href="http://vk.com/" target="_blank"><img src="img/VK_200_200_logo.png"  height="30" alt="ВКонтакте" Title="ВКонтакте" ></a>&nbsp;&nbsp;
+          <a href="https://www.facebook.com/" target="_blank"><img src="img/FB_200_200_logo_2.jpg"  height="30" alt="Facebook" Title="Facebook" ></a>
 
         </div>
 
