--- a/testhtml/welcome14/test.html
+++ b/testhtml/welcome14/test.html
@@ -2,17 +2,34 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="grid.css">
+        <link rel="stylesheet" href="style.css">
         <title>welcome #14</title>
         <link rel="shortcut icon" href="img/32x32xom.jpg">
     </head>
     <body>
+      <div class="container1">
+      <div class="container2">
+
         <div style="padding: 20px; border:1px solid red">
           <a href="http://vk.com/" target="_blank"><img src="img/VK_200_200_logo.png"  height="30" alt="ВКонтакте" Title="ВКонтакте" ></a>&nbsp;&nbsp;
           <a href="https://www.facebook.com/" target="_blank"><img src="img/FB_200_200_logo_2.jpg"  height="30" alt="Facebook" Title="Facebook" ></a>
-
         </div>
 
 
+        <div class="promo">
+          <span>Hello</span>
+        </div>
+
+        <div>
+          <span class="span0 span1"> Loraesent posuere iaculis erat eget aliquam. Quisque venenatis tellus venenatis, dictum est eu, tincidunt lectus. Sed eget elit sed erat maximus finibus. Integer nec augue justo. Nam urna massa, euismod consequat eros non, venenatis finibus sapien. Etiam vitae ultricies ante. Sed ut libero quis lorem varius tincidunt vel suscipit sapien. Ut ut quam in dui vestibulum consectetur dapibus non justo. </span>
+          <span class="span0 span2"> Loraesent posuere iaculis erat eget aliquam. Quisque venenatis tellus venenatis, dictum est eu, tincidunt lectus. Sed eget elit sed erat maximus finibus. Integer nec augue justo. Nam urna massa, euismod consequat eros non, venenatis finibus sapien. Etiam vitae ultricies ante. Sed ut libero quis lorem varius tincidunt vel suscipit sapien. Ut ut quam in dui vestibulum consectetur dapibus non justo. </span>
+          <hr>
+          <span class="span0 span3"> Loraesent posuere iaculis erat eget aliquam. Quisque venenatis tellus venenatis, dictum est eu, tincidunt lectus. Sed eget elit sed erat maximus finibus. Integer nec augue justo. Nam urna massa, euismod consequat eros non, venenatis finibus sapien. Etiam vitae ultricies ante. Sed ut libero quis lorem varius tincidunt vel suscipit sapien. Ut ut quam in dui vestibulum consectetur dapibus non justo. </span>
+          <span class="span0 span3"> Loraesent posuere iaculis erat eget aliquam. Quisque venenatis tellus venenatis, dictum est eu, tincidunt lectus. Sed eget elit sed erat maximus finibus. Integer nec augue justo. Nam urna massa, euismod consequat eros non, venenatis finibus sapien. Etiam vitae ultricies ante. Sed ut libero quis lorem varius tincidunt vel suscipit sapien. Ut ut quam in dui vestibulum consectetur dapibus non justo. </span>
+          <span class="span0 span3"> Loraesent posuere iaculis erat eget aliquam. Quisque venenatis tellus venenatis, dictum est eu, tincidunt lectus. Sed eget elit sed erat maximus finibus. Integer nec augue justo. Nam urna massa, euismod consequat eros non, venenatis finibus sapien. Etiam vitae ultricies ante. Sed ut libero quis lorem varius tincidunt vel suscipit sapien. Ut ut quam in dui vestibulum consectetur dapibus non justo. </span>
+        </div>
+
+      </div>
+      </div>
     </body>
 </html>
