--- a/testhtml/welcome14/test.html
+++ b/testhtml/welcome14/test.html
@@ -15,6 +15,11 @@
           <a href="https://www.facebook.com/" target="_blank"><img src="img/FB_200_200_logo_2.jpg"  height="30" alt="Facebook" Title="Facebook" ></a>
         </div>
 
+        <div style="padding: 20px 0; border:5px solid green;position: relative; min-height:25px">
+            <button class="prev">Prev Button</button>
+            <button class="next">Next Button</button>
+        </div>
+
 
         <div class="promo">
           <span>Hello</span>
