--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
 <p> <a href="testhtml/welcome11/" target=blank> HELLO </a> </p>
 <p> <a href="http://validator.w3.org/nu/" target=blank> validator </a> </p>
+<p> <a href="testhtml/barbershop00/" target=blank> barbershop </a> </p>
+<p> <a href="testhtml/keksby00/" target=blank> keks </a> </p>
   </body>
 
 </html>
