--- a/testhtml/barbershop00/index.html
+++ b/testhtml/barbershop00/index.html
@@ -106,22 +106,22 @@
 
       <footer class="main-footer">
         <div class="container clearfix">
-          <section class="footer-contacts">
+          <div class="footer-contacts">
             Barbershop «Borodinski»<br>
             адрес: г. Санкт-Петербург, ул. Собаки Павлова, д. 13<br>
             <a href="#">Как нас найти?</a><br>
             телефон: +7 (495) 666-02-66
-          </section>
-          <section class="footer-social">
+          </div>
+          <div class="footer-social">
             <p>Давайте дружить!</p>
             <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
             <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
             <a href="#" class="social-btn social-btn-inst">Инстаграм</a>
-          </section>
-          <section class="footer-copyright">
+          </div>
+          <div class="footer-copyright">
             <p>Дизайн сайта:</p>
             <a href="#" class="btn">glukhanko.ru</a>
-          </section>
+          </div>
         </div>
       </footer>
 
