--- a/testhtml/barbershop00/index.html
+++ b/testhtml/barbershop00/index.html
@@ -29,7 +29,7 @@
         <div class="logo">
           <img src="img/index-logo.png" width="368" height="204" alt="Barbershoop Borodinski">
         </div>
-        <section class="features clearfix">
+        <div class="features clearfix">
           <div class="features-item">
             <div class="features-title">Быстро</div>
             <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы&nbsp;&mdash; счастливый обладатель стильной стрижки-минутки!</p>
@@ -42,9 +42,9 @@
             <div class="features-title">Дорого</div>
             <p>Наши мастера&nbsp;&mdash; профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
           </div>
-        </section>
+        </div>
         <div class="index-content clearfix">
-          <section class="content-column-left">
+          <div class="content-column-left">
             <h2 class="content-column-title">Новости</h2>
             <ul class="news-preview">
               <li>
@@ -57,7 +57,7 @@
               </li>
             </ul>
             <a href="#" class="btn">Все новости</a>
-          </section>
+          </div>
           <section class="content-column-right">
             <h2 class="content-column-title">Фотогалерея</h2>
             <div class="gallery">
@@ -70,7 +70,7 @@
           </section>
         </div>
         <div class="index-content clearfix">
-          <section class="content-column-left">
+          <div class="content-column-left">
             <div class="main-contacts">
               <h2 class="content-column-title">Контактная информация</h2>
               <p>
@@ -86,8 +86,8 @@
               <a href="#" class="btn">Как проехать</a>
               <a href="#" class="btn">Обратная связь</a>
             </div>
-          </section>
-          <section class="content-column-right">
+          </div>
+          <div class="content-column-right">
             <div class="appointment-form">
               <h2 class="content-column-title">Записаться</h2>
               <p>Укажите желаемую дату и&nbsp;время и&nbsp;мы&nbsp;свяжемся с&nbsp;вами для подтверждения брони</p>
@@ -99,9 +99,8 @@
                 <button type="submit" class="btn">Отправить</button>
               </form>
             </div>
-          </section>
+          </div>
         </div>
-      </div>
       </main>
 
       <footer class="main-footer">
