--- a/testhtml/barbershop00/index.html
+++ b/testhtml/barbershop00/index.html
@@ -91,9 +91,9 @@
             <div class="appointment-form">
               <h2 class="content-column-title">Записаться</h2>
               <p>Укажите желаемую дату и&nbsp;время и&nbsp;мы&nbsp;свяжемся с&nbsp;вами для подтверждения брони</p>
-              <form action="" method="post">
-                <input type="date" name="date" value="" placeholder="Дата">
-                <input type="time" name="time" value="" placeholder="Время">
+              <form action="#" method="post">
+                <input type="text" name="date" value="" placeholder="Дата">
+                <input type="text" name="time" value="" placeholder="Время">
                 <input type="text" name="name" value="" placeholder="Ваше имя">
                 <input type="tel" name="phone" value="" placeholder="Телефон">
                 <button type="submit" class="btn">Отправить</button>
