price page added

--- a/testhtml/barbershop00/index.html
+++ b/testhtml/barbershop00/index.html
@@ -12,9 +12,10 @@
         <div class="container">
           <nav class="main-navigation">
             <ul>
+              <li class="active"><a href="#">Главная</a></li>
               <li><a href="#">Информация</a></li>
               <li><a href="#">Новости</a></li>
-              <li><a href="#">Прайс-лист</a></li>
+              <li><a href="price.html">Прайс-лист</a></li>
               <li><a href="#">Магазин</a></li>
               <li><a href="#">Контакты</a></li>
             </ul>
