--- a/testhtml/barbershop00/catalog.html
+++ b/testhtml/barbershop00/catalog.html
@@ -15,7 +15,7 @@
               <li><a href="index.html">Главная</a></li>
               <li><a href="#">Информация</a></li>
               <li><a href="#">Новости</a></li>
-              <li><a href="#">Прайс-лист</a></li>
+              <li><a href="price.html">Прайс-лист</a></li>
               <li class="active"><a href="#">Магазин</a></li>
               <li><a href="#">Контакты</a></li>
             </ul>
