--- a/testhtml/barbershop00/price.html
+++ b/testhtml/barbershop00/price.html
@@ -16,7 +16,7 @@
               <li><a href="#">Информация</a></li>
               <li><a href="#">Новости</a></li>
               <li class="active"><a href="#">Прайс-лист</a></li>
-              <li><a href="#">Магазин</a></li>
+              <li><a href="catalog.html">Магазин</a></li>
               <li><a href="#">Контакты</a></li>
             </ul>
           </nav>
