--- a/testhtml/barbershop00/index.html
+++ b/testhtml/barbershop00/index.html
@@ -7,17 +7,17 @@
         <link rel="shortcut icon" href="img/b-favicon.png">
         <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     </head>
-    <body>
+    <body class="body-index">
       <header class="main-header">
-        <div class="container">
+        <div class="container clearfix">
           <nav class="main-navigation">
             <ul>
               <li class="active"><a href="#">Главная</a></li>
-              <li><a href="#">Информация</a></li>
-              <li><a href="#">Новости</a></li>
+              <li><a href="item.html">Информация</a></li>
+              <li><a href="item.html">Новости</a></li>
               <li><a href="price.html">Прайс-лист</a></li>
               <li><a href="catalog.html">Магазин</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li><a href="item.html">Контакты</a></li>
             </ul>
           </nav>
           <div class="user-block">
