--- a/testhtml/barbershop00/item.html
+++ b/testhtml/barbershop00/item.html
@@ -9,15 +9,15 @@
     </head>
     <body>
       <header class="main-header">
-        <div class="container">
+        <div class="container clearfix">
           <nav class="main-navigation">
             <ul>
-              <li class="active"><a href="#">Главная</a></li>
-              <li><a href="index.html">Информация</a></li>
-              <li><a href="#">Новости</a></li>
+              <li><a href="index.html">Главная</a></li>
+              <li class="active"><a href="#">Информация</a></li>
+              <li class="active"><a href="#">Новости</a></li>
               <li><a href="price.html">Прайс-лист</a></li>
-              <li><a href="#">Магазин</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li><a href="catalog.html">Магазин</a></li>
+              <li class="active"><a href="#">Контакты</a></li>
             </ul>
           </nav>
           <div class="user-block">
