--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
         <title>Atlantida</title>
         <link rel="shortcut icon" href="#">
         <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     </head>
     <body>
       <header class="main-header">
@@ -33,20 +35,22 @@
         </div>
       </header>
 
-      <main class="container"> <!--only one tag main can be on the page -->
+
+
+      <main> <!--only one tag main can be on the page -->
 
         <div class="main-slider">
         </div>
 
         <div class="main-about-us">
           <div class="container">
-            <div class="img-about-us">
+            <div class="about-us-img">
             </div>
             <h2>ABOUT US</h2>
-            <span class="text-about-us">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu nisl facilisis, pretium augue a, semper arcu. Aliquam nec sapien nec nisl porta vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lacus ante, aliquet vitae scelerisque nec, interdum et justo. Nullam nec elit et lorem maximus varius. Quisque aliquet, dui gravida dignissim congue, metus nunc ornare ligula, vitae tristique mauris diam vel lectus. Pellentesque consectetur commodo ipsum. Nunc non venenatis turpis. Suspendisse potenti. Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.</span>
-            <div class=btn>
-              <a class="btn-black" href="#">Contact Us</a>
-              <a class="btn-black" href="#">Portfolio</a>
+            <span class="text-under-h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu nisl facilisis, pretium augue a, semper arcu. Aliquam nec sapien nec nisl porta vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lacus ante, aliquet vitae scelerisque nec, interdum et justo. Nullam nec elit et lorem maximus varius. Quisque aliquet, dui gravida dignissim congue, metus nunc ornare ligula, vitae tristique mauris diam vel lectus. Pellentesque consectetur commodo ipsum. Nunc non venenatis turpis. Suspendisse potenti. Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.</span>
+            <div class="btn-about">
+              <a class="btn" href="#">Contact Us</a>
+              <a class="btn btn-white" href="#">Portfolio</a>
             </div>
             <div class="row-item-main-about-us">
               <div class="item-about-us">
@@ -146,7 +150,7 @@
             <h2>OUR TEAM</h2>
             <span="ourteam-text"> Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.</span>
             <div class="outeam-item">
-            </div>  
+            </div>
           </div>
         </div>
 
