about us updated

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -42,7 +42,7 @@
         <div class="main-slider">
         </div>
 
-        <div class="main-about-us">
+        <div class="about-us">
           <div class="container">
             <div class="about-us-img">
             </div>
@@ -52,23 +52,26 @@
               <a class="btn" href="#">Contact Us</a>
               <a class="btn btn-white" href="#">Portfolio</a>
             </div>
-            <div class="row-item-main-about-us">
-              <div class="item-about-us">
-                <img src="#">
+            <div class="about-us-row-items">
+              <div class="about-us-item">
+                <img src="img/about-item-1.jpg" height="38px" width="41px" >
                 <span class="about-us-item-title">awards winner</span>
                 <span class="about-us-item-number">54</span>
               </div>
-              <div class="item-about-us">
+
+              <img src="img/about-divider.jpg">
+
+              <div class="about-us-item">
                 <img src="#">
                 <span class="about-us-item-title">jobs done</span>
                 <span class="about-us-item-number">1054</span>
               </div>
-              <div class="item-about-us">
+              <div class="about-us-item">
                 <img src="#">
                 <span class="about-us-item-title">happy clients</span>
                 <span class="about-us-item-number">120</span>
               </div>
-              <div class="item-about-us">
+              <div class="about-us-item">
                 <img src="#">
                 <span class="about-us-item-title">reviews recieved</span>
                 <span class="about-us-item-number">54</span>
