--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -39,7 +39,24 @@
 
       <main> <!--only one tag main can be on the page -->
 
-        <div class="main-slider">
+        <div class="slider">
+          <div class="container">
+            <div class="slider-prev">
+              <button>
+                <img src="img/slider-prev.png" height="34px" width="34px">
+              </button>
+            </div>
+            <div class="slider-data">
+              <span class="text-slider">Design Studio and Digital Agency</span>
+              <h1>We are Atlantida</h1>
+              <a class="btn btn-get-started" href="#">Get Started</a>
+            </div>
+            <div class="slider-next">
+              <button>
+                <img src="img/slider-next.png" height="34px" width="34px">
+              </button>
+            </div>
+          </div>
         </div>
 
         <div class="about-us">
