--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -69,28 +69,28 @@
               <a class="btn" href="#">Contact Us</a>
               <a class="btn btn-white" href="#">Portfolio</a>
             </div>
+
             <div class="about-us-row-items">
+
               <div class="about-us-item">
                 <img src="img/about-item-1.jpg" height="38px" width="41px" >
-                <span class="about-us-item-title">awards winner</span>
+                <span class="about-us-item-title">awards<br> winner</span>
                 <span class="about-us-item-number">54</span>
               </div>
 
-              <img src="img/about-divider.jpg">
-
               <div class="about-us-item">
-                <img src="#">
-                <span class="about-us-item-title">jobs done</span>
+                <img src="#" height="38px" width="41px">
+                <span class="about-us-item-title">jobs<br> done</span>
                 <span class="about-us-item-number">1054</span>
               </div>
               <div class="about-us-item">
-                <img src="#">
-                <span class="about-us-item-title">happy clients</span>
+                <img src="#" height="38px" width="41px">
+                <span class="about-us-item-title">happy<br> clients</span>
                 <span class="about-us-item-number">120</span>
               </div>
               <div class="about-us-item">
-                <img src="#">
-                <span class="about-us-item-title">reviews recieved</span>
+                <img src="#" height="38px" width="41px">
+                <span class="about-us-item-title">reviews<br> recieved</span>
                 <span class="about-us-item-number">54</span>
               </div>
             </div>
