--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -13,7 +13,8 @@
       <header class="main-header">
         <div class="container">
           <div class="header-logo">
-            <img src="#" height="" width="" alt="" title="">
+            <!--<img src="#" height="" width="" alt="" title="">-->
+            <span>ATLANTIDA</span> 
           </div>
           <nav class="main-navigation">
             <ul>
