--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -14,7 +14,7 @@
         <div class="container">
           <div class="header-logo">
             <!--<img src="#" height="" width="" alt="" title="">-->
-            <span>ATLANTIDA</span> 
+            <span>ATLANTIDA</span>
           </div>
           <nav class="main-navigation">
             <ul>
@@ -64,8 +64,8 @@
           <div class="container">
             <div class="about-us-img">
             </div>
-            <h2>ABOUT US</h2>
-            <span class="text-under-h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu nisl facilisis, pretium augue a, semper arcu. Aliquam nec sapien nec nisl porta vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lacus ante, aliquet vitae scelerisque nec, interdum et justo. Nullam nec elit et lorem maximus varius. Quisque aliquet, dui gravida dignissim congue, metus nunc ornare ligula, vitae tristique mauris diam vel lectus. Pellentesque consectetur commodo ipsum. Nunc non venenatis turpis. Suspendisse potenti. Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.</span>
+            <h2 class="color-grey-h2">ABOUT US</h2>
+            <span class="text-under-h2 color-grey-h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu nisl facilisis, pretium augue a, semper arcu. Aliquam nec sapien nec nisl porta vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lacus ante, aliquet vitae scelerisque nec, interdum et justo. Nullam nec elit et lorem maximus varius. Quisque aliquet, dui gravida dignissim congue, metus nunc ornare ligula, vitae tristique mauris diam vel lectus. Pellentesque consectetur commodo ipsum. Nunc non venenatis turpis. Suspendisse potenti. Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.</span>
             <div class="btn-about">
               <a class="btn" href="#">Contact Us</a>
               <a class="btn btn-white" href="#">Portfolio</a>
@@ -98,27 +98,27 @@
           </div>
         </div>
 
-        <div class="main-services">
+        <div class="services">
           <div class="container">
-            <h2>SERVICES</h2>
-            <span="services-text"> Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.</span>
+            <h2 class="color-white-h2">SERVICES</h2>
+            <span class="text-under-h2 color-white-h2">Donec aliquet, ipsum ut lobortis facilisis, nisi ligula aliquam odio, ut vehicula odio lorem in erat. Quisque quam ipsum, commodo non condimentum a, fermentum id sapien. Pellentesque sit amet sem neque.</span>
             <div class="services-row-item">
-              <div class="item-services">
+              <div class="services-item">
                 <img src="#">
                 <span class="services-item-title">graphic design</span>
                 <span class="services-item-text">Sed facilisis ac nibh at imperdiet. Vivamus ac diam aliquam, tincidunt ipsum sed, pellentesque nibh. Nulla facilisi. Praesent tristique porta metus at ultricies. In scelerisque posuere quam sit amet imperdiet. Cras eget nulla at nibh placerat facilisis ut eu nisl. Cras bibendum posuere lorem sed iaculis. Suspendisse rhoncus varius nibh, sed ultricies lectus facilisis vitae. Aliquam vel porta nibh, vitae eleifend lectus. Etiam urna metus, bibendum in cursus id, finibus id ante. Donec ligula libero, vehicula et sem a, viverra mollis massa. Praesent sed pharetra ex. Curabitur facilisis volutpat turpis ac aliquet. Morbi bibendum vel dui ac ullamcorper.</span>
               </div>
-              <div class="item-services">
+              <div class="services-item">
                 <img src="#">
                 <span class="services-item-title">website design</span>
                 <span class="services-item-text">Sed facilisis ac nibh at imperdiet. Vivamus ac diam aliquam, tincidunt ipsum sed, pellentesque nibh. Nulla facilisi. Praesent tristique porta metus at ultricies. In scelerisque posuere quam sit amet imperdiet. Cras eget nulla at nibh placerat facilisis ut eu nisl. Cras bibendum posuere lorem sed iaculis. Suspendisse rhoncus varius nibh, sed ultricies lectus facilisis vitae. Aliquam vel porta nibh, vitae eleifend lectus. Etiam urna metus, bibendum in cursus id, finibus id ante. Donec ligula libero, vehicula et sem a, viverra mollis massa. Praesent sed pharetra ex. Curabitur facilisis volutpat turpis ac aliquet. Morbi bibendum vel dui ac ullamcorper.</span>
               </div>
-              <div class="item-services">
+              <div class="services-item">
                 <img src="#">
                 <span class="services-item-title">seo and analitycs</span>
                 <span class="services-item-text">Sed facilisis ac nibh at imperdiet. Vivamus ac diam aliquam, tincidunt ipsum sed, pellentesque nibh. Nulla facilisi. Praesent tristique porta metus at ultricies. In scelerisque posuere quam sit amet imperdiet. Cras eget nulla at nibh placerat facilisis ut eu nisl. Cras bibendum posuere lorem sed iaculis. Suspendisse rhoncus varius nibh, sed ultricies lectus facilisis vitae. Aliquam vel porta nibh, vitae eleifend lectus. Etiam urna metus, bibendum in cursus id, finibus id ante. Donec ligula libero, vehicula et sem a, viverra mollis massa. Praesent sed pharetra ex. Curabitur facilisis volutpat turpis ac aliquet. Morbi bibendum vel dui ac ullamcorper.</span>
               </div>
-              <div class="item-services">
+              <div class="services-item">
                 <img src="#">
                 <span class="services-item-title">wordpress programming</span>
                 <span class="services-item-text">Sed facilisis ac nibh at imperdiet. Vivamus ac diam aliquam, tincidunt ipsum sed, pellentesque nibh. Nulla facilisi. Praesent tristique porta metus at ultricies. In scelerisque posuere quam sit amet imperdiet. Cras eget nulla at nibh placerat facilisis ut eu nisl. Cras bibendum posuere lorem sed iaculis. Suspendisse rhoncus varius nibh, sed ultricies lectus facilisis vitae. Aliquam vel porta nibh, vitae eleifend lectus. Etiam urna metus, bibendum in cursus id, finibus id ante. Donec ligula libero, vehicula et sem a, viverra mollis massa. Praesent sed pharetra ex. Curabitur facilisis volutpat turpis ac aliquet. Morbi bibendum vel dui ac ullamcorper.</span>
@@ -131,7 +131,7 @@
           <div class="container">
             <h2>HISTORY</h2>
             <span="services-text"> Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.</span>
-            <div class="services-item">
+            <div class="1services-item">
               <div class="services-item-all services-item-left-1">
                 <span class="services-item-title">Curabitur dictum ante tortor</span>
                 <span class="services-item-date">07 october 2015</span>
