--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -43,9 +43,9 @@
         <div class="slider">
           <div class="container">
             <div class="slider-prev">
-              <button>
-                <img src="img/slider-prev.png" height="34px" width="34px">
-              </button>
+                <a href="#">
+                  <img src="img/slider-prev.png" height="34px" width="34px">
+                </a>
             </div>
             <div class="slider-data">
               <span class="text-slider">Design Studio and Digital Agency</span>
@@ -53,9 +53,9 @@
               <a class="btn btn-get-started" href="#">Get Started</a>
             </div>
             <div class="slider-next">
-              <button>
-                <img src="img/slider-next.png" height="34px" width="34px">
-              </button>
+                <a href="#">
+                  <img src="img/slider-next.png" height="34px" width="34px">
+                </a> 
             </div>
           </div>
         </div>
@@ -80,7 +80,7 @@
               </div>
 
               <div class="about-us-item">
-                <img src="#" height="38px" width="41px">
+                <img src="img/Diploma1.png" height="38px" width="41px">
                 <span class="about-us-item-title">jobs<br> done</span>
                 <span class="about-us-item-number">1054</span>
               </div>
@@ -104,7 +104,9 @@
             <span class="text-under-h2 color-white-h2">Donec aliquet, ipsum ut lobortis facilisis, nisi ligula aliquam odio, ut vehicula odio lorem in erat. Quisque quam ipsum, commodo non condimentum a, fermentum id sapien. Pellentesque sit amet sem neque.</span>
             <div class="services-row-item">
               <div class="services-item">
-                <img src="#">
+                <div class="services-img">
+                  <img src="img/services-item-1.jpg" height="25px" width="26px">
+                </div>
                 <span class="services-item-title">graphic design</span>
                 <span class="services-item-text">Sed facilisis ac nibh at imperdiet. Vivamus ac diam aliquam, tincidunt ipsum sed, pellentesque nibh. Nulla facilisi. Praesent tristique porta metus at ultricies. In scelerisque posuere quam sit amet imperdiet. Cras eget nulla at nibh placerat facilisis ut eu nisl. Cras bibendum posuere lorem sed iaculis. Suspendisse rhoncus varius nibh, sed ultricies lectus facilisis vitae. Aliquam vel porta nibh, vitae eleifend lectus. Etiam urna metus, bibendum in cursus id, finibus id ante. Donec ligula libero, vehicula et sem a, viverra mollis massa. Praesent sed pharetra ex. Curabitur facilisis volutpat turpis ac aliquet. Morbi bibendum vel dui ac ullamcorper.</span>
               </div>
