--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <p> <a href="http://validator.w3.org/nu/" target=blank> validator </a> </p>
 <p> <a href="testhtml/barbershop00/" target=blank> barbershop </a> </p>
 <p> <a href="testhtml/keksby00/" target=blank> keks </a> </p>
+<p> <a href="testhtml/atlantida00/" target=blank> atlantida</a> </p>
   </body>
 
 </html>
