--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -74,23 +74,23 @@
             <div class="about-us-row-items">
 
               <div class="about-us-item">
-                <img src="img/about-item-1.jpg" height="38px" width="41px" >
+                <img src="img/aubout-us-item-1.png" width="41px" height="38px" >
                 <span class="about-us-item-title">awards<br> winner</span>
                 <span class="about-us-item-number">54</span>
               </div>
 
               <div class="about-us-item">
-                <img src="img/Diploma1.png" height="38px" width="41px">
+                <img src="img/aubout-us-item-2.png" width="41px" height="40px">
                 <span class="about-us-item-title">jobs<br> done</span>
                 <span class="about-us-item-number">1054</span>
               </div>
               <div class="about-us-item">
-                <img src="#" height="38px" width="41px">
+                <img src="img/aubout-us-item-3.png" width="33px" height="39px">
                 <span class="about-us-item-title">happy<br> clients</span>
                 <span class="about-us-item-number">120</span>
               </div>
               <div class="about-us-item">
-                <img src="#" height="38px" width="41px">
+                <img src="img/aubout-us-item-4.png" width="41px" height="37px">
                 <span class="about-us-item-title">reviews<br> recieved</span>
                 <span class="about-us-item-number">54</span>
               </div>
@@ -101,29 +101,35 @@
         <div class="services">
           <div class="container">
             <h2 class="color-white-h2">SERVICES</h2>
-            <span class="text-under-h2 color-white-h2">Donec aliquet, ipsum ut lobortis facilisis, nisi ligula aliquam odio, ut vehicula odio lorem in erat. Quisque quam ipsum, commodo non condimentum a, fermentum id sapien. Pellentesque sit amet sem neque.</span>
+            <span class="text-under-h2">Donec aliquet, ipsum ut lobortis facilisis, nisi ligula aliquam odio, ut vehicula odio lorem in erat. Quisque quam ipsum, commodo non condimentum a, fermentum id sapien. Pellentesque sit amet sem neque.</span>
             <div class="services-row-item">
               <div class="services-item">
                 <div class="services-img">
-                  <img src="img/services-item-1.jpg" height="25px" width="26px">
+                  <img src="img/services-item-1.png" width="26px" height="25px">
                 </div>
-                <span class="services-item-title">graphic design</span>
-                <span class="services-item-text">Sed facilisis ac nibh at imperdiet. Vivamus ac diam aliquam, tincidunt ipsum sed, pellentesque nibh. Nulla facilisi. Praesent tristique porta metus at ultricies. In scelerisque posuere quam sit amet imperdiet. Cras eget nulla at nibh placerat facilisis ut eu nisl. Cras bibendum posuere lorem sed iaculis. Suspendisse rhoncus varius nibh, sed ultricies lectus facilisis vitae. Aliquam vel porta nibh, vitae eleifend lectus. Etiam urna metus, bibendum in cursus id, finibus id ante. Donec ligula libero, vehicula et sem a, viverra mollis massa. Praesent sed pharetra ex. Curabitur facilisis volutpat turpis ac aliquet. Morbi bibendum vel dui ac ullamcorper.</span>
+                <span class="services-item-title">graphic<br> design</span>
+                <span class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
               </div>
               <div class="services-item">
-                <img src="#">
-                <span class="services-item-title">website design</span>
-                <span class="services-item-text">Sed facilisis ac nibh at imperdiet. Vivamus ac diam aliquam, tincidunt ipsum sed, pellentesque nibh. Nulla facilisi. Praesent tristique porta metus at ultricies. In scelerisque posuere quam sit amet imperdiet. Cras eget nulla at nibh placerat facilisis ut eu nisl. Cras bibendum posuere lorem sed iaculis. Suspendisse rhoncus varius nibh, sed ultricies lectus facilisis vitae. Aliquam vel porta nibh, vitae eleifend lectus. Etiam urna metus, bibendum in cursus id, finibus id ante. Donec ligula libero, vehicula et sem a, viverra mollis massa. Praesent sed pharetra ex. Curabitur facilisis volutpat turpis ac aliquet. Morbi bibendum vel dui ac ullamcorper.</span>
+                <div class="services-img">
+                  <img src="img/services-item-2.png" width="27px" height="21px">
+                </div>
+                <span class="services-item-title">website<br> design</span>
+                <span class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
               </div>
               <div class="services-item">
-                <img src="#">
-                <span class="services-item-title">seo and analitycs</span>
-                <span class="services-item-text">Sed facilisis ac nibh at imperdiet. Vivamus ac diam aliquam, tincidunt ipsum sed, pellentesque nibh. Nulla facilisi. Praesent tristique porta metus at ultricies. In scelerisque posuere quam sit amet imperdiet. Cras eget nulla at nibh placerat facilisis ut eu nisl. Cras bibendum posuere lorem sed iaculis. Suspendisse rhoncus varius nibh, sed ultricies lectus facilisis vitae. Aliquam vel porta nibh, vitae eleifend lectus. Etiam urna metus, bibendum in cursus id, finibus id ante. Donec ligula libero, vehicula et sem a, viverra mollis massa. Praesent sed pharetra ex. Curabitur facilisis volutpat turpis ac aliquet. Morbi bibendum vel dui ac ullamcorper.</span>
+                <div class="services-img">
+                  <img src="img/services-item-3.png" width="24px" height="22px">
+                </div>
+                <span class="services-item-title">seo & <br> analitycs</span>
+                <span class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
               </div>
               <div class="services-item">
-                <img src="#">
-                <span class="services-item-title">wordpress programming</span>
-                <span class="services-item-text">Sed facilisis ac nibh at imperdiet. Vivamus ac diam aliquam, tincidunt ipsum sed, pellentesque nibh. Nulla facilisi. Praesent tristique porta metus at ultricies. In scelerisque posuere quam sit amet imperdiet. Cras eget nulla at nibh placerat facilisis ut eu nisl. Cras bibendum posuere lorem sed iaculis. Suspendisse rhoncus varius nibh, sed ultricies lectus facilisis vitae. Aliquam vel porta nibh, vitae eleifend lectus. Etiam urna metus, bibendum in cursus id, finibus id ante. Donec ligula libero, vehicula et sem a, viverra mollis massa. Praesent sed pharetra ex. Curabitur facilisis volutpat turpis ac aliquet. Morbi bibendum vel dui ac ullamcorper.</span>
+                <div class="services-img">
+                  <img src="img/services-item-4.png" width="21px" height="21px">
+                </div>
+                <span class="services-item-title">wordpress <br>programming</span>
+                <span class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
               </div>
             </div>
           </div>
