history (atlantida) started

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -19,8 +19,8 @@
           <nav class="main-navigation">
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Services</a></li>
+              <li><a href="#aboutus-id">About</a></li>
+              <li><a href="#services-id">Services</a></li>
               <li><a href="#">Team</a></li>
               <li><a href="#">Portfolio</a></li>
               <li><a href="#">Prices</a></li>
@@ -43,24 +43,24 @@
         <div class="slider">
           <div class="container">
             <div class="slider-prev">
-                <a href="#">
+                <a href="#services-id">
                   <img src="img/slider-prev.png" height="34px" width="34px">
                 </a>
             </div>
             <div class="slider-data">
               <span class="text-slider">Design Studio and Digital Agency</span>
               <h1>We are Atlantida</h1>
-              <a class="btn btn-get-started" href="#">Get Started</a>
+              <a class="btn btn-get-started" href="#aboutus-id">Get Started</a>
             </div>
             <div class="slider-next">
-                <a href="#">
+                <a href="#history-id">
                   <img src="img/slider-next.png" height="34px" width="34px">
                 </a>
             </div>
           </div>
         </div>
 
-        <div class="about-us">
+        <div class="about-us" id="aboutus-id">
           <div class="container">
             <div class="about-us-img">
             </div>
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-        <div class="services">
+        <div class="services" id="services-id">
           <div class="container">
             <h2 class="color-white-h2">SERVICES</h2>
             <span class="text-under-h2">Donec aliquet, ipsum ut lobortis facilisis, nisi ligula aliquam odio, ut vehicula odio lorem in erat. Quisque quam ipsum, commodo non condimentum a, fermentum id sapien. Pellentesque sit amet sem neque.</span>
@@ -135,42 +135,104 @@
           </div>
         </div>
 
-        <div class="main-history">
+        <div class="history" id="history-id">
           <div class="container">
             <h2>HISTORY</h2>
-            <span="services-text"> Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.</span>
-            <div class="1services-item">
-              <div class="services-item-all services-item-left-1">
-                <span class="services-item-title">Curabitur dictum ante tortor</span>
-                <span class="services-item-date">07 october 2015</span>
-                <span class="services-item-text">Curabitur dictum ante tortor, et rhoncus ex sagittis non. Etiam faucibus augue vitae risus facilisis, et pellentesque mauris suscipit. Vestibulum in maximus nunc, quis fringilla nunc. Pellentesque est ante, commodo sed egestas eget, congue eget velit.</span>
+            <span class="text-under-h2">
+              In pulvinar, mi at rhoncus condimentum, turpis nisl scelerisque turpis, ut gravida eros tortor non arcu. In eget arcu ante. Curabitur lacinia ultricies ante, eget mattis orci vestibulum sit amet.
+            </span>
+
+            <div class="history-items-gr">
+
+              <div class="left-column">
+                <div class="history-item">
+                  <span class="history-item-title">
+                    Donec id lobortis tellus. Maecenas vel dignissim
+                  </span>
+                  <span class="history-item-date">
+                    07 October 2015
+                  </span>
+                  <span class="history-item-text">
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                    </p>
+                  </span>
+                </div>
+                <div class="history-item">
+                  <span class="history-item-title">
+                    Donec quis faucibus lorem
+                  </span>
+                  <span class="history-item-date">
+                    07 May 2015
+                  </span>
+                  <span class="history-item-text">
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                    </p>
+                  </span>
+                </div>
+                <div class="history-item">
+                  <span class="history-item-title">
+                    Donec id lobortis tellus. Maecenas vel dignissim
+                  </span>
+                  <span class="history-item-date">
+                    07 October 2015
+                  </span>
+                  <span class="history-item-text">
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                    </p>
+                  </span>
+                </div>
               </div>
-              <div class="services-item-all services-item-right-1">
-                <span class="services-item-title">Curabitur dictum ante tortor</span>
-                <span class="services-item-date">07 october 2015</span>
-                <span class="services-item-text">Curabitur dictum ante tortor, et rhoncus ex sagittis non. Etiam faucibus augue vitae risus facilisis, et pellentesque mauris suscipit. Vestibulum in maximus nunc, quis fringilla nunc. Pellentesque est ante, commodo sed egestas eget, congue eget velit.</span>
+
+              <div class="right-column">
+                <div class="history-item">
+                  <span class="history-item-title">
+                     Donec id lobortis tellus. Maecenas vel dignissim
+                  </span>
+                  <span class="history-item-date">
+                    07 October 2015
+                  </span>
+                  <span class="history-item-text">
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                    </p>
+                  </span>
+                </div>
+                <div class="history-item">
+                  <span class="history-item-title">
+                    Donec quis faucibus lorem
+                  </span>
+                  <span class="history-item-date">
+                    07 May 2015
+                  </span>
+                  <span class="history-item-text">
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                    </p>
+                    <p>
+                      Praesent id augue in risus molestie euismod molestie id augue. Suspendisse a libero porttitor, lobortis eros ac, varius velit. Praesent sed eros at elit suscipit laoreet vitae condimentum risus.
+                    </p>
+                 </span>
+                </div>
+                <div class="history-item">
+                  <span class="history-item-title">
+                    Donec id lobortis tellus. Maecenas vel dignissim
+                  </span>
+                  <span class="history-item-date">
+                    07 October 2015
+                  </span>
+                  <span class="history-item-text">
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                    </p>
+                  </span>
+                </div>
               </div>
-              <div class="services-item-all services-item-left-2">
-                <span class="services-item-title">Curabitur dictum ante tortor</span>
-                <span class="services-item-date">07 october 2015</span>
-                <span class="services-item-text">Curabitur dictum ante tortor, et rhoncus ex sagittis non. Etiam faucibus augue vitae risus facilisis, et pellentesque mauris suscipit. Vestibulum in maximus nunc, quis fringilla nunc. Pellentesque est ante, commodo sed egestas eget, congue eget velit.</span>
-              </div>
-              <div class="services-item-all services-item-right-2">
-                <span class="services-item-title">Curabitur dictum ante tortor</span>
-                <span class="services-item-date">07 october 2015</span>
-                <span class="services-item-text">Curabitur dictum ante tortor, et rhoncus ex sagittis non. Etiam faucibus augue vitae risus facilisis, et pellentesque mauris suscipit. Vestibulum in maximus nunc, quis fringilla nunc. Pellentesque est ante, commodo sed egestas eget, congue eget velit.</span>
-              </div>
-              <div class="services-item-all services-item-left-3">
-                <span class="services-item-title">Curabitur dictum ante tortor</span>
-                <span class="services-item-date">07 october 2015</span>
-                <span class="services-item-text">Curabitur dictum ante tortor, et rhoncus ex sagittis non. Etiam faucibus augue vitae risus facilisis, et pellentesque mauris suscipit. Vestibulum in maximus nunc, quis fringilla nunc. Pellentesque est ante, commodo sed egestas eget, congue eget velit.</span>
-              </div>
-              <div class="services-item-all services-item-right-3">
-                <span class="services-item-title">Curabitur dictum ante tortor</span>
-                <span class="services-item-date">07 october 2015</span>
-                <span class="services-item-text">Curabitur dictum ante tortor, et rhoncus ex sagittis non. Etiam faucibus augue vitae risus facilisis, et pellentesque mauris suscipit. Vestibulum in maximus nunc, quis fringilla nunc. Pellentesque est ante, commodo sed egestas eget, congue eget velit.</span>
-              </div>
+
             </div>
+
           </div>
         </div>
 
