--- a/testhtml/welcome11/index.html
+++ b/testhtml/welcome11/index.html
@@ -37,7 +37,19 @@
 
       </div>
 
-      <div class=main-nav>
+      <div class="main-nav">
+          <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">Menu-2</a></li>
+              <li><a href="">Menu-3</a></li>
+              <li><a href="">Menu-4</a></li>
+              <li><a href="">Menu-5</a></li>
+              <li><a href="">Menu-6</a></li>
+              <li><a href="">Help</a></li>
+          </ul>
+      </div>
+
+      <div class="main-nav">
           <ul>
               <li><a href="">Home</a></li>
               <li><a href="">Menu-2</a></li>
