--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   </head>
 
   <body>
-<p> <a href="testhtml/welcome11/" target=blank> HELLO </a> </p>
-<p> <a href="http://validator.w3.org/nu/" target=blank> validator </a> </p>
-<p> <a href="testhtml/barbershop00/" target=blank> barbershop </a> </p>
-<p> <a href="testhtml/keksby00/" target=blank> keks </a> </p>
-<p> <a href="testhtml/atlantida00/" target=blank> atlantida</a> </p>
+<p> <a href="#/" target=blank> HELLO </a> </p>
   </body>
 
 </html>
