--- a/testhtml/index.html
+++ b/testhtml/index.html
@@ -9,11 +9,12 @@
   </head>
 
   <body>
-<p> <a href="testhtml/welcome11/" target=blank> HELLO </a> </p>
+<h1> This is TestHtml folder </h1>   
+<p> <a href="http://rokocreo.github.io/testhtml/welcome11/" target=blank> HELLO </a> </p>
 <p> <a href="http://validator.w3.org/nu/" target=blank> validator </a> </p>
-<p> <a href="testhtml/barbershop00/" target=blank> barbershop </a> </p>
-<p> <a href="testhtml/keksby00/" target=blank> keks </a> </p>
-<p> <a href="testhtml/atlantida00/" target=blank> atlantida</a> </p>
+<p> <a href="http://rokocreo.github.io/testhtml/barbershop00/" target=blank> barbershop </a> </p>
+<p> <a href="http://rokocreo.github.io/testhtml/keksby00/" target=blank> keks </a> </p>
+<p> <a href="http://rokocreo.github.io/testhtml/atlantida00/" target=blank> atlantida</a> </p>
   </body>
 
 </html>
