--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -29,9 +29,9 @@
             </ul>
           </nav>
           <div class="social-block">
-            <a class="soc-fb" href="#"><img src="img/header-soc-fb.png" width=11px height=10px></a>
-            <a class="soc-tw" href="#"><img src="img/header-soc-tw.png" width=11px height=9px></a>
-            <a class="soc-be" href="#"><img src="img/header-soc-be.png" width=16px height=10px></a>
+            <a class="soc-fb" href="#"><img src="img/header-soc-fb.png" width="11" height="10"></a>
+            <a class="soc-tw" href="#"><img src="img/header-soc-tw.png" width="11" height="9"></a>
+            <a class="soc-be" href="#"><img src="img/header-soc-be.png" width="16" height="10"></a>
           </div>
         </div>
       </header>
